optimize download queue, add retry and retry all

--- a/src/assets/style/common/common.less
+++ b/src/assets/style/common/common.less
@@ -75,6 +75,12 @@
 .pl16{
   padding-left: 16px;
 }
+.pl0{
+  padding-left: 0;
+}
+.pr0{
+  padding-right: 0;
+}
 .text-active{
   color: @primary-color;
   cursor: pointer;
